#1 - ajustes de ortografia e acrescimo no capítulo

--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,7 @@
 \usepackage{rotating} 			%Rotação de páginas
 \usepackage{placeins}			% Forçar o posicionamento da figura
 \usepackage{siunitx} 
+\usepackage{listings}
 \usepackage[top=3cm, bottom=2cm, left=3cm, right=2cm]{geometry} % Margens
 
 
