--- a/textuais/capitulo3.tex
+++ b/textuais/capitulo3.tex
@@ -51,13 +51,69 @@ seria representado como a URL de um servidor ou serviço.) \textbf{get-comodos} 
 ser feita via chamada de API é bem simples, pois qualquer sistema seja \textit{web, desktop} ou qualquer outro tipo, basicamente precisa ter uma comunicação com a internet
 para utilizar o \textit{Power Monitor}. O \textit{software web} não precisa obrigatoriamente de internet para poder funcionar, pois a comunicação entre servidor e sistema é
 baseada em uma rede local, justamente para que o \textit{software} não dependa de terceiros. Para uma perfeita comunicação o ambiente só precisa está configurado
-na mesma rede \textit{Wi-Fi}.
+na mesma rede \textit{Wi-Fi}. 
 
 \begin{figure}[h!]
 	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{api}
 	\centering
 	\caption[Chamada de API]{Chamada de API}
 	\label{fig:api-ft}
+\end{figure}
+\FloatBarrier
+
+O \textit{software} pode ser dividido em duas partes, servidor \textit{web} e interface \textit{web}. O servidor foi desenvolvido usando a linguagem
+\textit{javascript} (\autoref{js}) e para auxílio foi utilizado o \textit{framework node.js} (\autoref{node}), a comunicação entre servidor e banco de dados
+é feita pelo \textit{MySQL Server} (\autoref{sql}). A interface \textit{web} é o agente consumidor de todos esses serviços, com uma comunicação via 
+\textit{webscoket} (\autoref{websocket}) com o servidor é capaz de receber e enviar dados a qualquer instante. A combinação desses três serviços - servidor \textit{web},
+servidor do banco de dados e interface \textit{web} - resultou em uma aplicação intuitiva e amigável, desenvolvida para dar o total suporte às análises do dados
+enviados pelo \textit{hardware}. Como já foi apresentada a \autoref{fig:principal-ft} representa a tela inicial da interface \textit{web}, vê-se que é possível
+visualizar o total gasto no mês decorrente, o progresso dos gastos por cômodo que por sua vez é baseado na espectativa de gasto mensal (\autoref{fig:configuracao-ft}), a lista
+de todos os cômodos cadastrados e um gráfico mostrando o consumo por cômodo referente ao mês atual.
+
+As figuras: \autoref{fig:c-comodo}, \autoref{fig:l-comodo}, \autoref{fig:c-dispositivo}, \autoref{fig:l-dispositivo} e \autoref{fig:configuracao-ft}, 
+são relacionadas as telas de cadastro, listagem e de configuração da interface \textit{web}. Nelas é possível cadastrar e listar comodôs e dispositivos assim como 
+configurar alguns parâmetros do sistema como o preço da trarifa cobrado por KWh pela empresa resposável e a espectativa de gasto mensal.
+
+Uma vez que os cômodos, dispositivos e parâmetros são cadastrados no sistema é possível gerencia-los através da edição ou exclusão dos dados, que se torna possível
+nas telas de listagem, para os cômodos e dispositivos, já os parâmetros do sistema na própria tela de configuração se faz a edição dos dados. 
+
+\begin{figure}[h!]
+	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{c-comodo}
+	\centering
+	\caption[Cadastro de um cômodo]{Cadastro de um cômodo}
+	\label{fig:c-comodo}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[h!]
+	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{l-comodo}
+	\centering
+	\caption[Lista dos cômodos cadastrados]{Lista dos cômodos cadastrados}
+	\label{fig:l-comodo}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[h!]
+	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{c-dispositivo}
+	\centering
+	\caption[Cadastro de um dispositivo]{Cadastro de um dispositvio}
+	\label{fig:c-dispositivo} 
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[h!]
+	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{l-dispositivo}
+	\centering
+	\caption[Listagem dos dispositivos cadastrados]{Listagem dos dispositivos cadastrados}
+	\label{fig:l-dispositivo} 
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[h!]
+	\includegraphics[width=1.0\textwidth, keepaspectratio=true]{configuracao}
+	\centering
+	\caption[Tela de configuração dos parâmetros do sistema]{Tela de configuração dos parâmetros do sistema}
+	\label{fig:configuracao-ft} 
 \end{figure}
 \FloatBarrier
 
