#1 -  correção de texto

--- a/textuais/capitulo3.tex
+++ b/textuais/capitulo3.tex
@@ -70,7 +70,7 @@ enviados pelo \textit{hardware}. Como já foi apresentada a \autoref{fig:princip
 visualizar o total gasto no mês decorrente, o progresso dos gastos por cômodo que por sua vez é baseado na espectativa de gasto mensal (\autoref{fig:configuracao-ft}), a lista
 de todos os cômodos cadastrados e um gráfico mostrando o consumo por cômodo referente ao mês atual.
 
-As figuras: \autoref{fig:c-comodo}, \autoref{fig:l-comodo}, \autoref{fig:c-dispositivo}, \autoref{fig:l-dispositivo} e \autoref{fig:configuracao-ft}, 
+As figuras: \ref{fig:c-comodo}, \ref{fig:l-comodo}, \ref{fig:c-dispositivo}, \ref{fig:l-dispositivo} e \ref{fig:configuracao-ft}, 
 são relacionadas as telas de cadastro, listagem e de configuração da interface \textit{web}. Nelas é possível cadastrar e listar comodôs e dispositivos assim como 
 configurar alguns parâmetros do sistema como o preço da trarifa cobrado por KWh pela empresa resposável e a espectativa de gasto mensal.
 
