#1 - ajuste de ortografia

--- a/textuais/capitulo3.tex
+++ b/textuais/capitulo3.tex
@@ -259,7 +259,7 @@ na mesma rede \textit{Wi-Fi}. O grande motivo para a escolha do ESP8266 como pla
 \end{lstlisting}
 
 Após estabelecer a conecção o próximo passo será interligar o servidor \textit{web} com o \textit{hardware} através da comunicação por \textit{websocket},
-que será facilitada por meio da biblioteca \textit{SocketIOClient}, ela nos proporciona alguns métodos como: \textit{\textbf{emit}}\protect\footnotemark, \textit{\textbf{on}}\protect\footnotemark 
+que será facilitada por meio da biblioteca \textit{SocketIOClient}, ela fornece alguns métodos como: \textit{\textbf{emit}}\protect\footnotemark, \textit{\textbf{on}}\protect\footnotemark 
 e \textit{\textbf{connect}}\protect\footnotemark  que ajudam no momento de concretizar a comunicação total do \textit{hardware}. A seguir terá um
 exemplo de como usar os métodos citados com o código anterior.
 
