--- a/textuais/conclusao.tex
+++ b/textuais/conclusao.tex
@@ -1,4 +1,22 @@
 \chapter[Conclusão]{Conclusão}
-\label{ch:cap6}
+\label{ch:conclusao-cap}
 
-Escreva suas conclusões, limitações do seu trabalho, contribuições, trabalhos futuros, etc.
+Do início ao fim deste trabalho de conclusão de curso, alguns conceitos foram apresentados
+e demonstrados a respeito do consumo de energia elétrica, visando criar um cenário
+comparativo a respeito da situação energética do país. Ao longo dos anos o povo brasileiro
+ouviu sobre propostas na melhoria do meio ambiente, sustentáveis e até
+melhoria na infraestrutura urbana. Porém na maiora das vezes nunca passou de apenas propostas.
+
+Por meio do estudo realizado neste trabalho constatou-se que a leitura do
+consumo energético feita em tempo real e disponibilizada para o usuário de uma maneira entendível e direta
+desperta a curiosidade e consequentemente a conscientização do mesmo. Apenas mostrar os resultados coletados não seria suficiente
+para a conscientização do cidadão brasileiro, a forma com que os resultados são relatados para o consumidor tem um grande impacto, pois
+no momento em que a unidade de medida do consumo de energia elétrica é "trocada" do quilowatt-hora para a moeda em circulação no país, o real, 
+faz com que todos os brasileiros independente da classe social ou do grau de escolaridade entenda o quanto tem se consumido e disperdiçado em sua residência.
+
+Este trabalho traz uma solução eficiente no monitoramento de energia elétrica, tanto no ambito do \textit{software} como na comunicação com 
+\textit{hardware}. O Sistema foi pensado de tal maneira que mesmo em que não exista a presença de um \textit{hardware} para controlar os dispositivos físicos
+o utente possa, ainda sim, monitorar os seus gatos por meio das simulações que levam em conta o consumo esperado do dispositivo. A facilidade de estabelecer 
+a comunicação entre servidor \textit{web} e outros dispositivos físicos, traz a possibilidade do usuário poder sempre expandir e melhorar as formas
+de monitoramento de energia em sua residência. Além disso o trabalho implementa um novo padrão para se mensurar o consumo da energia elétrica nas
+residências ,  
