#2 - objeticos e estrutura do trabalho

--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -247,18 +247,33 @@ possibilitando um planejamento mais eficiente da rede. Aliado aos sensores na re
 \FloatBarrier
 
 O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, possibilitanto ao usuário
-possuir informações valiosas a todo momento. O trabalho fará um paralelo com algumas das várias possibilidades de medição de consumo e monitoramento
-de energia, provando que através da prática de gerenciamento e monitoramento de energia é possível conscientizar o usuário do mau uso da energia elétrica.
-Então a partir desse dispositivo será possível entender como e onde a energia está sendo gasta, possibilitando mais informações ao usuário e ajudando para
-que ele tome as precauções certas para economizar.
+possuir informações valiosas a todo momento. O trabalho fará um paralelo com algumas possibilidades de medição de consumo e monitoramento
+de energia, provando através da prática que é possível conscientizar o usuário do mau uso da energia elétrica.
+Então a partir desse dispositivo será possível entender como e onde a energia está sendo gasta. O sistema também disponibilza de ferramentas para que 
+caso o utente possua o conhecimento necessário o mesmo venha a modificar ou aprimorar o gerenciamento de energia. O sistema nomeado de \textit{power monitor}
+traz consigo uma nova forma de enxergar o consumo dos aparelhos presentes em uma residência, trocando o quilowatt-hora pela moeda de circulação no país,
+o real, tal mudança é o principal fator de consientização, pois aproxima o consumidor dos gastos energéticos.
 
-O trabalho será dividido da seguinte maneira: No \autoref{ch:cap2}
 
 \section{Motivação}
-O que lhe motiva a realizar este trabalho.
+
 
 \section{Objetivos}
-Objetivo geral e específicos.
+A objetivo existente neste trabalho é da conscientização do consumidor em relação aos gastos energéticos presentes em sua residência. Percebendo o
+atual cenário brasileiro de total falta de informação em relação ao consumo em tempo real de energia, junto com o período em que o país 
+passou de crise hídrica e energética, este trabalho propõe uma alternativa simples e barata onde qualquer brasileiro independente do grau de 
+escolaridade ou classe social poderá acompanhar o consumo de energia elétrica de sua residência de uma maneira mais fácil e direta. O \textit{power monitor}
+é composto por elementos de \textit{software} e \textit{hardware} que gerenciam automaticamente todos os dispositivos cadastrados presentes em uma
+residência, esse gerenciamento se deve ao conjunto formado pelo servidor \textit{web} que é responsável por enviar e receber informações ao \textit{hardware} e
+a interface \textit{web}, juntamento com o banco de dados que é responsável por guardar todas as informações coletadas pelo \textit{hardware} e a interface
+\textit{web} tem o papel de agente consumidor de todos os dados e tratará as informações da melhor forma possível.
+
 
 \section{Estrutura do Trabalho}
-Este trabalho apresenta uma introdução sobre o tema, mostrando os fatores que motivam a implantação da ideia, além da justificativa e dos objetivos. Em sequência, o \autoref{ch:cap2} aborda (...). O \autoref{ch:cap3}, por sua vez, explica a metodologia para ..., enquanto o \autoref{ch:cap4} trata de (...). O \autoref{ch:cap5} apresenta (...). Por fim, o \autoref{ch:cap6} traz as principais conclusões e contribuições deste trabalho.
+Este trabalho foi desenvolvido no intuito de apresentar um sistema para o monitoramento de energia e conscientização do usuário em relação aos 
+gastos energéticos presentes em sua residência. O trabalho foi estruturado para que se possa mostrar nos próximos capítulos os seguintes conteúdos:
+\begin{itemize}
+	\item Capítulo 2: Embasamento Teórico - Descrição das tecnologias utilizadas neste trabalho;
+	\item Capítulo 3: Desenvolvimento - Será descrita as etapas de implementação do projeto, desde uma visão geral do funcionamento a comunicação entre \textit{hardware} e servidor \textit{web};
+	\item Capítulo 4: Conclusão - Conclusão e trabalhos futuros;
+\end{itemize}
