--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -256,7 +256,14 @@ o real, tal mudança é o principal fator de consientização, pois aproxima o c
 
 
 \section{Motivação}
-
+A conjuntura do cenário energético atual do Brasil, junto com a crise em vários setores e principalmente no setor
+energético do país e a falta de transparência na informação levada ao usuário foi o que motivou este trabalho. Hoje se vive em uma realidade onde
+ter informação em tempo real do consumo de energia em um estabeleciento é muito difícil, pois os equipamentos que proporcionam esse tipo de informação
+não são acessíveis a todos os brasileiros, apenas companhias de energia ou pessoas com alto grau de estudo conseguem manusear ou entender o dados
+fornecidos por esse tipo de equipamento. Toda essa privação da informação traz consequências, uma delas é o descaso do brasileiro em relação ao
+racionamento de energia elétrica, como já foi citado no trabalho o Brasil em seis anos desperdiçou o equivalente a R\$ 62 bilhões, motivo que se 
+dá a falta de conscientização do consumidor. Trazer uma forma com que consumo de energia elétrica, conta de luz, fique mais fácil e simples de se entender
+e acompanhar é o que o sistema \textit{power monitor} fará.   
 
 \section{Objetivos}
 A objetivo existente neste trabalho é da conscientização do consumidor em relação aos gastos energéticos presentes em sua residência. Percebendo o
