--- a/pre-textuais/resumo.tex
+++ b/pre-textuais/resumo.tex
@@ -2,22 +2,25 @@
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 
-Escreva seu resumo aqui. Ele deve ser parágrafo único e sem récuo na primeira linha.
- \lipsum[1-1]
+Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica, em tempo real e totalmente customizável.
+Tem como proposta um dispositivo e um sistema que juntos somam a nova realidade de meios para a economia de energia.
+O equipamento tem como base a plataforma de prototipagem NodeMCU que possui o microcontrolador ESP8266 acoplado em seu circuito integrado,
+o circuito que é controlado pelo NodeMCU possui um sensor de corrente que afere o consumo em tempo real de um dispositivo e, através
+do envio desses dados a um servidor onde possui comunicação com um agente consumidor é possível acompanhar todo o consumo de energia elétrica em tempo real.
+O intuito é que o constante monitoramento possa trazer uma conscientização da economia de energia.
  
  \noindent
- \textbf{Palavras-chaves}: palavra1. palavra2. palavra3. 
+ \textbf{Palavras-chaves}: Economia de energia. Monitoramento. Eficiência Energética. IoT. 
 \end{resumo}
 % ---
 % resumo em inglês
 \begin{resumo}[Abstract]
-	\begin{otherlanguage*}{english}
+	\begin{otherlanguage*}{english}	
 	
-	Write here your abstract with the same rules.
-	\lipsum[1-1]
+	This work consists of the development of a real-time home monitoring system for electricity, which is fully customizable. It proposes a device and a system that together add the new reality of means for energy saving. The equipment is based on the NodeMCU prototyping platform that has the ESP8266 microcontroller coupled to its integrated circuit, the circuit that is controlled by the NodeMCU has a current sensor that measures the real time consumption of a device and, by sending this data to a server where you have communication with a consumer agent it is possible to monitor all the consumption of electricity in real time. The intention is that constant monitoring can bring an awareness of energy savings.
 	
 	\vspace{\onelineskip}
 	\noindent 
-	\textbf{Keywords}: keyword1. keyword2. keyword3.
+	\textbf{Keywords}: Energy saving. Monitoring. Energy Efficiency. IoT
 	\end{otherlanguage*}
 \end{resumo}
